Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 <a id="before-you-start" class="anchor" href="#before-you-start" aria-hidden="true"><span class="octicon octicon-link"></span></a>Before you start</h3>
 
 <ul>
-<li>you must have a GitHub account. Follow the FAQ here <a href="http://cms-sw.github.io/faq.html">http://cms-sw.github.io/faq.html</a>
+<li>you must have a GitHub account. Follow the FAQ <a href="http://cms-sw.github.io/faq.html">here</a>
 if in trouble</li>
+<li>make sure your machine is acknowledged by GitHub <a href="https://help.github.com/articles/generating-ssh-keys/">ssh key generation</a>
+</li>
 <li>join MilanoBicocca-pix common github (ask Riccardo)</li>
-<li>take this gitconfig <a href="https://github.com/rmanzoni/tools/blob/master/mygitconfig">https://github.com/rmanzoni/tools/blob/master/mygitconfig</a> , change user and email and put it into your ~/.gitconfig</li>
+<li>take <a href="https://github.com/rmanzoni/tools/blob/master/mygitconfig">this gitconfig</a>, change user and email and put it into your ~/.gitconfig</li>
 </ul>
 
 <h3>
